--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @layer components{
+    .timeline{
+        @apply{
+            text-4xl
+        }
+    }
+} */
